--- a/src/components/ui/ButtonElement/ButtonElement.module.css
+++ b/src/components/ui/ButtonElement/ButtonElement.module.css
@@ -110,7 +110,7 @@
 }
 
 .exitButton {
-    background-color: transparent;
+    background-color: #f9fafb;
     border: 1px solid #6c6f81;
     color: #6c6f81;
     box-shadow: 0 4px 12px rgba(173, 173, 173, 0.3);
@@ -118,6 +118,11 @@
 .exitButton:hover {
     background-color: rgba(108, 111, 129, 0.1);
     box-shadow: 0 2px 6px rgba(173, 173, 173, 0.3);
+}
+
+
+.modalButton {
+    padding: 10px 24px;
 }
 
 /*Не активная кнопка - цвет:
