--- a/src/components/ModalContent/ModalContent.module.css
+++ b/src/components/ModalContent/ModalContent.module.css
@@ -1,8 +1,14 @@
 .contentBlock {
+    font-family: "Montserrat", sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 16px;
+}
+
+.modal h3 {
+    font-size: 1.25rem;
+    font-weight: 600;
 }
 
 .contentBlock p {
