--- a/src/components/ModalContent/ModalContent.module.css
+++ b/src/components/ModalContent/ModalContent.module.css
@@ -126,3 +126,26 @@
     outline: none;
     box-shadow: none;
 }
+
+.paidStatusBlock {
+    display: flex;
+    gap: 20px;
+}
+.paidStatusBlock input {
+    width: 100%;
+}
+.paidStatusBlock .dropdownLabel {
+    width: 100%;
+}
+
+div {
+    transition: opacity 0.3s ease, filter 0.3s ease;
+}
+
+div.disabled {
+    opacity: 0.5;
+    pointer-events: none;
+    user-select: none;
+    filter: grayscale(0.2);
+    transition: opacity 0.3s ease, filter 0.3s ease;
+}
