--- a/src/components/ui/Diagramm/Diagramm.module.css
+++ b/src/components/ui/Diagramm/Diagramm.module.css
@@ -22,6 +22,7 @@
     font-size: 14px;
     color: #6c6f81;
     font-weight: 500;
+    height: max-content;
 }
 
 .legendBlock {
@@ -31,8 +32,7 @@
     border: 1px solid #dcdce7;
     border-radius: 8px;
     padding: 10px;
-    gap: 8px;
-    margin-bottom: 10px;
+    gap: 5px;
     margin-top: 20px;
 }
 
@@ -42,4 +42,9 @@
     height: 10px;
     margin-right: 8px;
     border-radius: 4px;
+}
+
+.legendTitle {
+    display: inline-block;
+    width: calc(100% - 10px);
 }
