--- a/src/pages/Analitics/Analitics.module.css
+++ b/src/pages/Analitics/Analitics.module.css
@@ -69,8 +69,8 @@
     display: grid;
     grid-template-columns: 2fr 1fr;
     gap: 40px;
-    height: 450px;
-    /* margin: 2rem 0; */
+    /* height: 450px; */
+    margin-bottom: 50px;
 }
 
 .graphsBlock h2,
@@ -81,7 +81,7 @@
     margin-top: 0;
 }
 .timeGraph {
-    height: 400px;
+    height: 450px;
 }
 
 .graph {
