--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -50,7 +50,7 @@
 
 .subscriptionsBlock {
     display: grid;
-    grid-template-columns: 3fr 2fr;
+    grid-template-columns: 2fr 1fr;
     gap: 40px;
     margin: 2rem 0;
 }
@@ -66,6 +66,7 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+    justify-content: space-between;
 }
 
 .diagrammBlock {
@@ -84,6 +85,7 @@
     box-shadow:  0 4px 6px rgba(0, 0, 0, 0.05), 0 8px 24px rgba(0, 0, 0, 0.08);
     height: 100%;
     border: 1px solid #e5e7eb;
+    padding: 0 10px 10px;
 }
 
 .sortBy {
